0.4.4 (UNRELEASED)
------------------
- testsuite: Write "skip" messages to stdout instead of stderr.
- README.rst: Add information about building, testing, running, and
  contributing.

0.4.3 (2013-08-23)
------------------
- preload: Don't call overridden readlink() in helper function. Fixes building
  with gcc 4.6 and older. (issue #27)
- Support USBDEVFS_GET_CAPABILITIES ioctl.
- preload: Repair recording if device gets opened multiple times (got broken in
  0.3)
- ioctl recording: Never consider input URBs equal even if they have exactly
  the same data, as that might give a mismatch between identical SUBMITs and
  different REAPs.

0.4.2 (2013-08-01)
------------------
- preload: Don't intercept netlink socket() calls during recording.
- Update devices/cameras/canon-powershot-sx200.ioctl for libgphoto 2.5.

0.4.1 (2013-07-29)
------------------
Bug fixes:
- preload: Wrap __open_2() and __open64_2().

0.4 (2013-07-29)
----------------
New features:
- Add recording of Unix stream sockets. (part of issue #24)
- Add new method umockdev_testbed_load_socket_script() to replay recorded
  read()s/recv()s and write()s/send()s to a Unix socket. (part of issue #24)
- Add new umockdev-run option -u/--unix-stream to load a script for a mocked
  Unix socket into the testbed. (part of issue #24)
- Add new script file operation "f" to set a fuzz level when comparing expected
  incoming strings. (issue #26)
- Add docs/script-format.txt: document the umockdev script format.
- README.rst: Add unix socket record/replay example.

Bug fixes:
- Quote send/received data in script replay debug output, to get along with
  embedded null bytes and control characters. (issue #25)

0.3.2 (2013-07-18)
------------------
- script replay: Fix endless loop on end of script file.
- Fix /umockdev-run/integration/input-evtest for 32 bit architectures. Add a
  script recorded on 32 bit and select the right one in the test.