@@ -402,6 +402,14 @@ examples_DATA = $(EXAMPLES)
 EXTRA_DIST += $(EXAMPLES)
 
 # -------------------------------------------------------------
+# code coverage
+
+# umockdev-scan is something internal from gcov/lcov, ignore that
+CODE_COVERAGE_IGNORE_PATTERN = */docs/* */usr/* *umockdev-scan*
+CODE_COVERAGE_LCOV_OPTIONS = --base-directory $(top_builddir)
+@GNOME_CODE_COVERAGE_RULES@
+
+# -------------------------------------------------------------
 # developer tools
 
 indent:
